Enabled diff and mounting of updated data package